--- a/.env
+++ b/.env
@@ -1,3 +1,1 @@
-API_URL = /api/v1
-CONNECTION_STRING = 'mongodb+srv://juladays:Delfin88@cluster0.onbu3l1.mongodb.net/?retryWrites=true&w=majority'
-secret = 'majlo'
+CONNECTION_STRING = 'baza'
